# OBD-datalogger-with-wireless-dashboard

./: CMakeLists.txt  platformio.ini  sdkconfig  sdkconfig.old
data/: index.html  script.js  style.css
main/: CMakeLists.txt  Mock_CAN.h  display.h  main.cpp  vehicle_data.c  vehicle_data.h
